# d_language_compiler

./: README.md
LexerTest/: LexerTest.sln  LexerTest.vcxproj  LexerTest.vcxproj.filters  lex.yy.c  unistd.h
LexerTest/x64/Debug/: result1.txt  result10.txt  result11.txt  result12.txt  result13.txt  result14.txt  result15.txt  result16.txt  result17.txt  result18.txt  result19.txt  result2.txt  result20.txt  result21.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt  start.bat  test1.d  test10.d  test11.d  test12.d  test13.d  test14.d  test15.d  test16.d  test17.d  test18.d  test19.d  test2.d  test21.d  test3.d  test4.d  test5.d  test6.d  test7.d  (+2 more)
full_parser/: Makefile  ast_builder.c  ast_builder.h  ast_visualizer.c  ast_visualizer.h  codegen_jvm.c  codegen_jvm.h  d_lexer_par.l  d_parser.tab.c  d_parser.tab.h  d_parser.y  language_capabilities.docx  lex.yy.c  main.c  test.d  tree_nodes.h
full_parser/JVMClassBuilder/: .gitignore  CMakeLists.txt  README.md
full_parser/JVMClassBuilder/cmake/: java-internal-paths.h.in.h  jvm-class-builderConfig.cmake.in
full_parser/JVMClassBuilder/examples/: CMakeLists.txt  hello-world.cpp
full_parser/JVMClassBuilder/include/jvm/: attribute-code.h  attribute.h  class-file-element.h  class.h  constant-class.h  constant-double.h  constant-fieldref.h  constant-float.h  constant-integer.h  constant-interface-methodref.h  constant-long.h  constant-methodref.h  constant-name-and-type.h  constant-string.h  constant-utf-8-info.h  constant.h  descriptor-field.h  descriptor-method.h  descriptor.h  exception-handler.h  field.h  instruction-jump.h  instruction-ldc.h  instruction-value.h  instruction-with-constant.h  instruction.h  label.h  method.h  owner-aware.h  serializable.h
full_parser/JVMClassBuilder/include/jvm/internal/: utils.h
full_parser/JVMClassBuilder/include/jvmc/: jvmc.h
full_parser/JVMClassBuilder/java-internal/: pom.xml
full_parser/JVMClassBuilder/java-internal/src/main/java/compilator/fix/: FixClass.java
full_parser/JVMClassBuilder/src/: attribute-code.cpp  attribute.cpp  class.cpp  constant-class.cpp  constant-double.cpp  constant-fieldref.cpp  constant-float.cpp  constant-integer.cpp  constant-interface-methodref.cpp  constant-long.cpp  constant-methodref.cpp  constant-name-and-type.cpp  constant-string.cpp  constant-utf-8-info.cpp  constant.cpp  descriptor-field.cpp  descriptor-method.cpp  exception-handler.cpp  field.cpp  instruction-jump.cpp  instruction-ldc.cpp  instruction-with-constant.cpp  instruction.cpp  jvmc_wrapper.cpp  label.cpp  method.cpp
full_parser/JVMClassBuilder/src/internal/: utils.cpp
full_parser/final_test/: !test_07_by_value_vs_ref.d  !test_11_super.d  !test_15_enum_cross_assign_error.d  ast.dot  example_complex.d  helloworld.d  test_01_bubble_sort.d  test_02_flood_fill_flat_10x10.d  test_03_short_circuit.d  test_04_3_polymorphism_array_dispatch.d  test_04_polymorphism.d  test_04_polymorphism_1.d  test_04_polymorphism_2.d  test_04_polymorphism_4_override_signature_error.d  test_05_1_private_access_error.d  test_05_2_static_field_visibility.d  test_05_private_access_error.d  test_06_ops_all_types.d  test_07_by_value_vs_ref.d  test_08_fibonacci.d  test_09_function_overloading.d  test_09_super.d  test_10_destructor.d  test_11_1_super_ctor_order.d  test_11_super.d  test_11_super_1_ctor_order.d  test_12_ops_with_int_float.d  test_13_builtin_func.d  test_14_enum_usage.d  test_16_loops.d  test_17_4_str_append.d  test_17_arr_append.d  test_17_arr_append_1.d  test_17_arr_append_2.d  test_17_arr_append_enum.d  test_17_str_append_char.d  test_18_slices_correctness_and_errors.d
full_parser/semantic/: error_reporting.c  error_reporting.h  jvm_codegen_helpers.c  jvm_codegen_helpers.h  jvm_layout.c  jvm_layout.h  name_resolution.c  name_resolution.h  semantic_analyzer.c  semantic_analyzer.h  semantic_passes.c  semantic_passes.h  semantic_transforms.c  semantic_transforms.h  semantic_types.h  type_inference.c  type_inference.h
full_parser/test_semantic/err/: err_access_private_field.d  err_access_private_method.d  err_ambiguous_function_call.d  err_append_assignment_invalid.d  err_array_access_non_array.d  err_array_index_type.d  err_assignment_lhs_not_assignable.d  err_duplicate_class.d  (+46 more)
full_parser/tests/: test_access.d  test_arrays.d  test_assignment_chains.d  test_assignments.d  test_break_continue.d  test_chained_access.d  test_comparison.d  test_complex.d  test_decl_double.d  test_decl_double_init.d  test_decl_float_init.d  test_decl_int_init.d  test_decl_string.d  test_decl_string_init.d  test_expr_add.d  test_expr_and.d  test_expr_assign.d  test_expr_div.d  test_expr_div_assign.d  test_expr_eq.d  test_expr_false.d  test_expr_ge.d  test_expr_gt.d  test_expr_le.d  test_expr_lt.d  test_expr_minus_assign.d  test_expr_mul.d  test_expr_mul_assign.d  test_expr_nan.d  test_expr_neq.d  test_expr_null.d  test_expr_or.d  test_expr_paren.d  test_expr_plus_assign.d  test_expr_sub.d  test_expr_true.d  test_expr_unary_minus.d  test_expr_unary_not.d  test_expr_unary_plus.d  test_foreach.d  (+11 more)
full_parser/tests_syntax/: run_tests.bat  test_array_indexing.d  test_arrays.d  test_classes.d  test_complex_expressions.d  test_declarations.d  test_enum.d  test_expression_combinations.d  test_logical.d  test_member_access.d  test_method_calls.d  test_new_expressions.d  test_new_expressions_detailed.d  test_switch.d  test_this.d
lexer/: CMakeLists.txt  build.ps1  d_lexer.l  d_lexer_dual_pass.l  d_lexer_optimized.l  d_parser.y  lex.yy.c  main.cpp
lexer/tests/: run_test.py  test.d
parser/: build.ps1  d_parser.output  d_parser.tab.c  d_parser.tab.h  d_parser.y  d_parser2.output  d_parser2.y  examples.txt  test_parser.d
semantics/: Makefile  README.txt  ast.dot  ast_builder.c  ast_visualizer.h  d_lexer_par.l  d_parser.tab.h  lex.yy.c  semantic_analyzer.c  tree_nodes.h
semantics/semantic/: error_reporting.c  error_reporting.h  semantic_analyzer.h  semantic_passes.c  semantic_types.h
semantics/tests_syntax/: test_arithmetic.d  test_assignments.d  test_functions.d  test_super.d
(+64 files in other folders)
